--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -128,7 +128,7 @@ a {
 
       .btn-account,
       .btn-logout {
-        width: 130px;
+        width: fit-content;
         height: 45px;
         border-radius: 5px;
         display: flex;
